修复字体使用默认字体

--- a/apkTools_release/tools/formatter/json_formatter.html
+++ b/apkTools_release/tools/formatter/json_formatter.html
@@ -5,11 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JSON 格式化工具</title>
-    <!-- Google Fonts - 艺术字体 -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../../assets/css/theme.css">
+  <link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
     /* 继承theme.css的基础样式 */
     /* 以下是工具页面特定的样式覆盖 */
@@ -169,7 +165,8 @@
     }
 
     .preview-section .json-null {
-      color: var(--color-text-secondary); }
+      color: var(--color-text-secondary);
+    }
 
     .preview-section .json-error {
       color: var(--color-error);
@@ -252,7 +249,8 @@
       background: var(--color-surface-alt);
       border-radius: 6px;
       font-size: var(--font-size-small);
-      color: var(--color-text-secondary); }
+      color: var(--color-text-secondary);
+    }
 
     .stat-item {
       display: flex;
@@ -260,7 +258,8 @@
     }
 
     .stat-item strong {
-      color: var(--color-text-secondary); }
+      color: var(--color-text-secondary);
+    }
   </style>
 </head>
 
