--- a/apkTools_release/tools/converter/svg_converter.html
+++ b/apkTools_release/tools/converter/svg_converter.html
@@ -5,15 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SVG 互转 PNG/JPG/JPEG 工具</title>
-    <!-- Google Fonts - 艺术字体 -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../../assets/css/theme.css">
+  <link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
     /* 继承theme.css的基础样式 */
     /* 以下是工具页面特定的样式覆盖 */
-    
+
     .container {
       max-width: 1000px;
     }
@@ -295,11 +291,15 @@
         <h2>预览</h2>
         <div class="preview">
           <div class="card">
-            <div style="font-weight:var(--font-weight-semibold);color:var(--color-text);margin-bottom:var(--spacing-sm)">输入文件预览</div>
+            <div
+              style="font-weight:var(--font-weight-semibold);color:var(--color-text);margin-bottom:var(--spacing-sm)">
+              输入文件预览</div>
             <div id="inputPreview"></div>
           </div>
           <div class="card">
-            <div style="font-weight:var(--font-weight-semibold);color:var(--color-text);margin-bottom:var(--spacing-sm)">输出结果预览</div>
+            <div
+              style="font-weight:var(--font-weight-semibold);color:var(--color-text);margin-bottom:var(--spacing-sm)">
+              输出结果预览</div>
             <img id="outputPreview" class="preview-image" alt="">
           </div>
         </div>
