--- a/apkTools_release/tools/text/writing/bookEditor.html
+++ b/apkTools_release/tools/text/writing/bookEditor.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>书本创作</title>
-  <link rel="stylesheet" href="../../assets/css/theme.css">
+  <link rel="stylesheet" href="../../../assets/css/theme.css">
   <style>
     .container {
       max-width: 1800px;
@@ -656,9 +656,9 @@
     }
   </style>
   <link rel="icon" href="data:,">
-  <script src="../../assets/js/tools.js"></script>
-  <script src="../../assets/js/themes.js"></script>
-  <script src="../../assets/js/theme-ui.js"></script>
+  <script src="../../../assets/js/tools.js"></script>
+  <script src="../../../assets/js/themes.js"></script>
+  <script src="../../../assets/js/theme-ui.js"></script>
 </head>
 
 <body>
