--- a/apkTools_release/tools/text/writing/writing_editor.html
+++ b/apkTools_release/tools/text/writing/writing_editor.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>写作编辑器</title>
-  <link rel="stylesheet" href="../../assets/css/theme.css">
+  <link rel="stylesheet" href="../../../assets/css/theme.css">
   <style>
     /* 继承theme.css的基础样式 */
     .container {
@@ -515,15 +515,15 @@
     }
   </style>
   <link rel="icon" href="data:,">
-  <script src="../../assets/js/tools.js"></script>
-  <script src="../../assets/js/themes.js"></script>
-  <script src="../../assets/js/theme-ui.js"></script>
+  <script src="../../../assets/js/tools.js"></script>
+  <script src="../../../assets/js/themes.js"></script>
+  <script src="../../../assets/js/theme-ui.js"></script>
 </head>
 
 <body>
   <div class="container">
     <div class="header">
-      <a href="../../index.html" class="home-btn">🏠</a>
+      <a href="../../../index.html" class="home-btn">🏠</a>
       <h1></h1>
       <p></p>
     </div>
